--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.idea/
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
@@ -7,9 +9,6 @@
 
 # testing
 /coverage
-
-# production
-/build
 
 # misc
 .DS_Store
